# react-native-fast-encoder

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-fast-encoder.podspec  react-native-fast-openpgp.podspec  test-lib.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  fast-encoder-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fastencoder/: FastEncoderBridge.kt  FastEncoderModule.kt  FastEncoderPackage.kt
android/src/main/java/com/fastopenpgp/: FastOpenpgpModule.kt
android/src/main/java/com/testlib/: TestLibModule.java  TestLibPackage.java
android/src/main/jniLibs/arm64-v8a/: libencoder_bridge.h
android/src/main/jniLibs/armeabi-v7a/: libencoder_bridge.h
android/src/main/jniLibs/x86/: libencoder_bridge.h
android/src/main/jniLibs/x86_64/: libencoder_bridge.h
cpp/: libencoder_bridge.h  react-native-fast-encoder.cpp  react-native-fast-encoder.h  test-lib.cpp  test-lib.h
example/: app.json  index.js  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/ios/: .gitignore  .xcode.env.local  File.swift  Podfile
example/ios/FastEncoderExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/FastEncoderExample.xcodeproj/: project.pbxproj
example/ios/FastEncoderExample.xcworkspace/: contents.xcworkspacedata
example/ios/FastEncoderExampleTests/: FastEncoderExampleTests.m
example/ios/FastOpenpgpExample/: AppDelegate.mm
example/ios/FastOpenpgpExample.xcodeproj/: project.pbxproj
example/ios/TestLibExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/TestLibExample.xcodeproj/: project.pbxproj
example/ios/TestLibExampleTests/: TestLibExampleTests.m
example/src/: App.tsx
example/src/modules/: Convert.tsx  EncryptDecrypt.tsx  EncryptDecryptFile.tsx  EncryptDecryptSymmetric.tsx  EncryptDecryptSymmetricFile.tsx  Generate.tsx  Metadata.tsx  SignVerify.tsx  SignVerifyFile.tsx
ios/: FastEncoderModule.h  FastEncoderModule.mm  FastOpenpgp.mm  TestLib.h  TestLib.mm
ios/nativeUtils.xcframework/: Info.plist
src/: NativeFastEncoderModule.ts  index.tsx  types.d.ts
(+9 files in other folders)
